Fix modal width on smaller devices

--- a/_src/scss/modules/_modal.scss
+++ b/_src/scss/modules/_modal.scss
@@ -34,8 +34,8 @@
 }
 .modal-dialog {
   position: absolute;
-  width: auto;
-  margin: 10px;
+  width: 90%;
+  margin: 0;
   top: 25%;
   left: 50%;
   transform-origin: 0 0;
